# postal

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README.md  TODO.md  autogen.sh  configure.ac
cut-n-paste/: neo-debug.h  neo-logger-daily.h  neo-logger-unix.c  neo-logger.h  neo-service.c  neo-service.h  url-router.c  url-router.h
data/conf/: postald.conf
data/init/: Makefile.include  postald.service.in
doc/: postal.tex
drivers/twisted/: txpostal.py
examples/: c2dm-device.json  gcm-device.json  notify.json
init/: .gitignore  Makefile.include  postald.conf.in
init/sysconfig/: postald.in
m4/: .gitignore
mongo-glib/: Makefile.include  mongo-bson-stream.c  mongo-bson-stream.h  mongo-bson.c  mongo-bson.h  mongo-client-context.h  mongo-client.c  mongo-client.h  mongo-collection.c  mongo-connection.c  mongo-connection.h  mongo-cursor.c  mongo-database.h  mongo-debug.h  mongo-glib.h  mongo-manager.c  mongo-message-delete.c  mongo-message-delete.h  mongo-message-insert.h  mongo-message-kill-cursors.c  mongo-message-kill-cursors.h  mongo-message-msg.c  mongo-message-query.c  mongo-message-reply.h  mongo-message.c  mongo-message.h  mongo-object-id.c  mongo-object-id.h  mongo-operation.c  mongo-operation.h  mongo-output-stream.c  mongo-protocol.c  mongo-protocol.h  mongo-source.c  mongo-source.h  mongo-version.h  mongo-write-concern.c
neo/: Makefile.include  neo-application.c  neo-logger-daily.c  neo-logger-unix.c  neo-logger-unix.h  neo-logger.c  neo-service-base.c  neo-service.c  neo-service.h  neo.h
postal/: Makefile.include  main.c  postal-application.c  postal-application.h  postal-bson.c  postal-bson.h  postal-device.c  postal-device.h  postal-dm-cache.c  postal-dm-cache.h  postal-http.c  postal-http.h  postal-metrics.c  postal-metrics.h  postal-notification.c  postal-notification.h  postal-redis.c  postal-redis.h  postal-service.c  postal-service.h
push-glib/: Makefile.include  push-aps-client.c  push-aps-client.h  push-aps-identity.h  push-aps-message.h  push-c2dm-client.c  push-c2dm-client.h  push-c2dm-identity.h  push-c2dm-message.c  push-gcm-client.c  push-gcm-client.h  push-gcm-identity.c  push-gcm-identity.h  push-gcm-message.c  push-gcm-message.h  push-glib.h
redis-glib/: Makefile.include  redis-adapter.h  redis-client.c  redis-client.h
src/cut-n-paste/: guri.c  guri.h
src/drivers/postal-sharp/Postal/: Device.cs  DeviceType.cs  Service.cs
src/drivers/python/: postal.py
src/mongo-glib/: Makefile.include  mongo-collection.c  mongo-collection.h  mongo-connection.c  mongo-cursor.c  mongo-cursor.h  mongo-database.c  mongo-debug.h  mongo-flags.c  mongo-flags.h  mongo-input-stream.c  mongo-input-stream.h  mongo-manager.h  mongo-message-getmore.c  mongo-message-getmore.h  mongo-message-insert.c  mongo-message-msg.h  mongo-message-query.h  mongo-message-reply.c  mongo-message-update.c  mongo-message-update.h  mongo-message.h  mongo-operation.h  mongo-output-stream.h  mongo-protocol.c  mongo-server.c  mongo-server.h  mongo-source.c  mongo-write-concern.h
src/neo/: Makefile.include  neo-application.h  neo-service-base.h
src/neo/old/: neo-service-base.c
src/postal/: Makefile.include  postal-application.c  postal-debug.h  postal-device.c  postal-dm-cache.c  postal-dm-cache.h  postal-http.c  postal-http.h  postal-redis.c  postal-service.h
src/push-glib/: Makefile.include  push-aps-identity.c  push-aps-message.c  push-c2dm-client.h  push-c2dm-identity.c  push-c2dm-message.h  push-debug.h  push-gcm-client.c  push-gcm-identity.c  push-gcm-message.c  push-gcm-message.h  push-glib.h
src/redis-glib/: Makefile.include  redis-glib.h
src/tools/: Makefile.include  postal-remove-device.c
tests/: Makefile.include  test-helper.h  test-mongo-bson.c  test-mongo-collection.c  test-mongo-connection.c  test-mongo-cursor.c  test-mongo-manager.c  test-mongo-message-insert.c  test-mongo-message-reply.c  test-mongo-object-id.c  test-mongo-protocol.c  test-postal-device.c  test-postal-dm-cache.c  test-postal-http.c  test-postal-service.c  test-url-router.c
tests/bson/: create.py
tools/: Makefile.include  postal-add-device.c  postal-get-devices.c
